# Cordite

./: Cordite.sln  README.md
Cordite/: CMakeLists.txt  Cordite.vcxproj  Cordite.vcxproj.filters  main.cpp
Cordite/include/agents/: Callback.h  Callback_utils.h  dead_agent_manager.h
Cordite/include/commands/: Applications.h  Clipboard.h  CmdUtils.h  CommandHandler.h  DefenderExclusion.h  FileUtils.h  Location.h  ProcessList.h  Screenshot.h  sysinfo.h  wifiProfiles.h
Cordite/include/core/: CommandRegister.h  Config.h  DiscordClient.h  EventHandler.h  HttpClient.h  InitializationStatus.h  WebSocketClient.h
Cordite/src/agents/: Callback.cpp  Callback_utils.cpp  dead_agent_manager.cpp
Cordite/src/commands/: Applications.cpp  Clipboard.cpp  CmdUtils.cpp  CommandHandler.cpp  DefenderExclusion.cpp  FileUtils.cpp  Location.cpp  ProcessList.cpp  Screenshot.cpp  sysinfo.cpp  wifiProfiles.cpp
Cordite/src/core/: CommandRegister.cpp  Config.cpp  DiscordClient.cpp  EventHandler.cpp  HttpClient.cpp  InitializationStatus.cpp  WebSocketClient.cpp
cordite-builder/: build_utils.py  discord_utils.py  main.py  ui.py  utils.py
